objects/tffa__ApplicationRoutingMatrix__c.object
<CustomObject>
    <description>A  matrix that represents business rules for routing (or assigning) applications to a queue or specific user. It has 2 parts - facts and outcomes. Facts are a set of fields that form the criteria representing the business rule condition. e.g. status = Review, Amount &lt; 1000, etc. Outcomes are a set of fields that represent the business rule action (assignee type and assignee). e.g. User User, Abandoned Applications, etc.</description>
    <fields>
        <fullName>AccountOpeningStatus__c</fullName>
        <description>Account Opening Status</description>
        <label>Account Opening Status(Set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationRoutingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountPreference__c</fullName>
        <description>This includes both OD and E-Statement</description>
        <label>AccountPreference Status(Set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationRoutingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZKYCOutcomeQueueName__c</fullName>
        <description>KYC Outcome Queue Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Outcome Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitCardIssuanceStatus__c</fullName>
        <description>Debit Card Issuance Status</description>
        <label>Debit Card Issuance Status(Set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationRoutingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to AgentDetail if assigneeType is AGENT. An outcome. In this case, the User associated with the AgentDetail becomes the actual assignee.</description>
        <label>Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Application Routing Matrices</relationshipLabel>
        <relationshipName>ApplicationRoutingMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AmountFrom__c</fullName>
        <description>The amount (lower bound) applied captured for the application. This nature of the amount depends on the nature of the product applied. A fact.</description>
        <label>Amount (from)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AmountTo__c</fullName>
        <description>The amount (upper bound) applied captured for the application. This nature of the amount depends on the nature of the product applied. A fact.</description>
        <label>Amount (to)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AssigneeType__c</fullName>
        <description>Type of assignee - USER, QUEUE or AGENT. An outcome. In case of AGENT, the User associated with the AgentDetail becomes the actual assignee.</description>
        <label>Assignee type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AssigneeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The brand code under which the application was started. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>The channel via which the application was started. Supports multiple. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Champion/Challenger strategy to which this record belongs. Used in Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Strategies configured for Application Routing Matrix can only be selected.</errorMessage>
            <filterItems>
                <field>tffa__DecisionStrategy__c.tffa__Configuration__r.tffa__EntityType__c</field>
                <operation>equals</operation>
                <value>ApplicationRoutingMatrix</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Application Routing Matrices</relationshipLabel>
        <relationshipName>ApplicationRoutingMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCodeSet__c</fullName>
        <description>The location (branch) code associated with the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;XXX;B01;</inlineHelpText>
        <label>Location code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OfferCodeSet__c</fullName>
        <description>The offer code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Offer Code Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary applicant of the application in the financial institution. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartySegmentSet__c</fullName>
        <description>The segment to which the primary applicant of the application belongs. Supports multiple. A fact.</description>
        <label>Party segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>The product category of the application. Supports multiple. A fact.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCodeSet__c</fullName>
        <description>The product code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Product code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionCodeSet__c</fullName>
        <description>The promotion code applied on the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;PROMO-01;PROMO-02;</inlineHelpText>
        <label>Promotion code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__QueueName__c</fullName>
        <description>Developer name of the queue if assigneeType is QUEUE. An outcome.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ScoreFrom__c</fullName>
        <description>The calculated score (lower bound) of the application. A fact.</description>
        <label>Score (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ScoreTo__c</fullName>
        <description>The calculated score (upper bound) of the application. A fact.</description>
        <label>Score (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order (or priority) of the records (or rules). Records with lower sortOrder values are given higher priority and are selected first.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StatusDurationFrom__c</fullName>
        <description>The amount of time (lower bound) in hours the application was in current status. A fact.</description>
        <label>Status duration (from) (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StatusDurationTo__c</fullName>
        <description>The amount of time (upper bound) in hours the application was in current status. A fact.</description>
        <label>Status duration (to) (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StatusSet__c</fullName>
        <description>The status of the application. Supports multiple. A fact.</description>
        <label>Status (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to User if assigneeType is USER. An outcome.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Application Routing Matrices</relationshipLabel>
        <relationshipName>ApplicationRoutingMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Routing Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__StatusSet__c</columns>
        <columns>AccountOpeningStatus__c</columns>
        <columns>AccountPreference__c</columns>
        <columns>tffa__QueueName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Routing Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__AgentIsRequired</fullName>
        <active>true</active>
        <description>If assignee type is AGENT, Agent must be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(tffa__AssigneeType__c, &quot;AGENT&quot;), ISBLANK( tffa__Agent__c))</errorConditionFormula>
        <errorDisplayField>tffa__Agent__c</errorDisplayField>
        <errorMessage>Agent is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__QueueNameIsRequired</fullName>
        <active>true</active>
        <description>If assignee type is QUEUE, Queue name must be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(tffa__AssigneeType__c, &quot;QUEUE&quot;), ISBLANK( tffa__QueueName__c))</errorConditionFormula>
        <errorDisplayField>tffa__QueueName__c</errorDisplayField>
        <errorMessage>Queue name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__UserIsRequired</fullName>
        <active>true</active>
        <description>If assignee type is USER, User must be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(tffa__AssigneeType__c, &quot;USER&quot;), ISBLANK( tffa__User__c))</errorConditionFormula>
        <errorDisplayField>tffa__User__c</errorDisplayField>
        <errorMessage>User is required</errorMessage>
    </validationRules>
</CustomObject>